[package]
name = "rust"
version = "0.1.0"
authors = ["objektwerks <objektwerks@runbox.com>"]
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-rt = "2.11.0"
actix-web = "4.11.0"
anyhow = "1.0.99"
async-std = { version = "1.13.2", features = ["attributes", "tokio1"] }
chrono = "0.4.42"
futures = "0.3.31"
hyper = { version = "0.14.32", features = ["full"] }
log = "0.4.28"
log4rs = "1.4.0"
reqwest = { version = "0.11.27", features = ["blocking"] }
rocket = "0.5.1"
rusqlite = "0.32.1"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = [
  "runtime-tokio",
  "postgres",
] }
tide = "0.16.0"
tokio = { version = "1.44.2", features = ["full"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3